# map_reduce

./: .gitignore  CMakeLists.txt  LICENSE  README.md  perf_cuda.csv  perf_natv.csv
docs/: Map Reduce.pptx  perf_amd_cuda.csv  perf_amd_natv.csv  perf_indel_cuda.csv  perf_intel_cpp.csv  performance.xlsx
etc/: basic.sh
mandelbrot_cpp/: CMakeLists.txt  main.cpp  mandel.cpp  mandel.hpp
mandelbrot_cuda/: CMakeLists.txt  main.cu  mandel.cu  mandel.cuh
perf_cpp/: CMakeLists.txt  perf.cpp
perf_cuda/: CMakeLists.txt  perf.cu
spt/: assert.cpp  assert.hpp  cuda_collection.cuh  image.cpp  image.hpp  mandel_common.cpp  mandel_common.hpp  natv_collection.hpp  perf_common.cpp  perf_common.hpp  support.cpp  support.hpp  test_common.cpp  timer.cpp  timer.hpp
test_common/: common.hpp
test_cpp/: CMakeLists.txt  test_cpp.cpp
test_cuda/: CMakeLists.txt  test_cuda.cu
